<resources>
    <string name="app_name">termsApp</string>
    <string name="channel_name">myChannel</string>
    <string name="channel_description">myChannelDescription</string>
    <string name="notification">notification resource</string>
    <string name="save_assessment">Save Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="save_course">Save Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="save_term">Save Term</string>
    <string name="delete_term">Delete Term</string>
    <string name="add_sample_terms">Add Sample Terms</string>
    <string name="share">Share Note</string>
    <string name="notify_start">Notify Start</string>
    <string name="notify_end">Notify End</string>
    <string name="course_title">Course Title:</string>
    <string name="course_start">Course Start:</string>
    <string name="course_end_date">Course End Date:</string>
    <string name="course_status">Course Status:</string>
    <string name="instructor_name">Instructor Name:</string>
    <string name="instructor_phone">Instructor Phone #:</string>
    <string name="instructor_email">Instructor Email:</string>
    <string name="note_optional">Note (Optional):</string>
    <string name="associated_assessments">Associated Assessments</string>
    <string name="term_name">Term Name:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="associated_courses">Associated Courses</string>
    <string name="assessment_title">Assessment Title:</string>
    <string name="assessment_type">Assessment Type:</string>
    <string name="assessment_start">Assessment Start:</string>
    <string name="assessment_end">Assessment End:</string>
    <string name="username">username:</string>
    <string name="password">password:</string>
    <string name="login">LOGIN</string>
    <string name="clear">CLEAR</string>
    <string name="enter">Enter</string>
    <string name="search">search...</string>
    <string name="searchButton">search</string>
    <string name="need_to_register">Need to register?</string>
    <string name="sign_up">sign up</string>
    <string name="save">save</string>
    <string name="dateError">Dates Must be Equal or Chronological</string>
    <string name="share_report">Share Report</string>
    <string-array name="status_array">
        <item>Plan to Take</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
    </string-array>
    <string-array name="type_array">
        <item>Objective Assessment</item>
        <item>Performance Assessment</item>
    </string-array>
</resources>